# vrchat-light-sync

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  settings.example.yaml
src/: main.rs
