[package]
name = "vrchat-light-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
nannou_osc = "0.18"
